tests/bad/const-type-array.pas
program const_type_array;

type
    Vec = array[0..1] of integer;

const
    v: Vec = 1;

begin
end.
